--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
+    "clean": "rimraf ./docs",
+    "cp": "cpx dist/** ./docs",
+    "pages": "yarn run clean && yarn run build && yarn run cp",
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
@@ -33,6 +36,7 @@
     "chalk": "^2.0.1",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
+    "cpx": "^1.5.0",
     "css-loader": "^0.28.0",
     "cssnano": "^3.10.0",
     "eslint": "^3.19.0",
@@ -53,7 +57,7 @@
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
     "ora": "^1.2.0",
-    "rimraf": "^2.6.0",
+    "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
     "sass-resources-loader": "^1.3.0",
     "semver": "^5.3.0",
